# mitiplan

./: .gitignore  Cargo.toml  bootstrap  build.sh  package-lock.json
frontend/: index.js  package-lock.json  package.json
frontend/public/: M1S.csv  M2S.csv  M3S.csv  M4S.csv
frontend/src/: fightgrid.css  fightgrid.js  fights.js  fightselector.css  fightselector.js  hoverbubble.css  hoverbubble.js  index.css  index.js  jobbar.css  jobbar.js  jobs.js  jobtimeline.js  persistence.js  persistencecontrol.css  persistencecontrol.js
public/: index.html
src/: fights.js  index.css  index.js  jobs.js  main.rs  model.rs
