[package]
name = "timeline"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5"
base64 = "0.22"
bytes = "1.7"

lambda_runtime = "0.13"
lambda_http = "0.13"

ring = "0.17"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["use-std"] }

tokio = "1.39"

rusoto_core = { version = "0.48", features = ["rustls"], default-features = false }
rusoto_dynamodb = { version = "0.48", features = ["rustls", "deserialize_structs"], default-features = false }
